multicluster/pkg/test/istio-expose-binding/ratings-binding.yaml.golden
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  annotations:
    multicluster.istio.io/provenance: default.ratings
  creationTimestamp: null
  name: service-entry-ratings
  namespace: default
spec:
  endpoints:
  - address: 255.255.255.255
    ports:
      http: 8080
  hosts:
  - ratings.default.svc.cluster.local
  ports:
  - name: http
    number: 80
    protocol: HTTP
  resolution: STATIC
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  annotations:
    multicluster.istio.io/provenance: default.ratings
  creationTimestamp: null
  name: dest-rule-ratings
  namespace: default
spec:
  host: ratings.default.svc.cluster.local
  trafficPolicy:
    tls:
      caCertificates: /etc/certs/root-cert.pem
      clientCertificate: /etc/certs/cert-chain.pem
      mode: MUTUAL
      privateKey: /etc/certs/key.pem
      sni: ratings.default.svc.cluster.local
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    multicluster.istio.io/provenance: default.ratings
  creationTimestamp: null
  name: ratings
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 0
  type: ClusterIP
status:
  loadBalancer: {}
