multicluster/pkg/test/istio-expose-binding/reviews-binding-three-versions.yaml.golden
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  annotations:
    multicluster.istio.io/provenance: default.reviews
  creationTimestamp: null
  name: service-entry-reviews
  namespace: default
spec:
  endpoints:
  - address: 255.255.255.255
    ports:
      http: 8080
  hosts:
  - reviews.default.svc.cluster.local
  ports:
  - name: http
    number: 9080
    protocol: HTTP
  resolution: STATIC
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  annotations:
    multicluster.istio.io/provenance: default.reviews
  creationTimestamp: null
  name: dest-rule-reviews
  namespace: default
spec:
  host: reviews.default.svc.cluster.local
  trafficPolicy:
    tls:
      caCertificates: /etc/certs/root-cert.pem
      clientCertificate: /etc/certs/cert-chain.pem
      mode: MUTUAL
      privateKey: /etc/certs/key.pem
      sni: reviews.default.svc.cluster.local
---
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  annotations:
    multicluster.istio.io/provenance: default.reviews
  creationTimestamp: null
  name: service-entry-reviews-v1
  namespace: default
spec:
  endpoints:
  - address: 255.255.255.255
    ports:
      http: 8080
  hosts:
  - reviews-v1.default.svc.cluster.local
  ports:
  - name: http
    number: 9080
    protocol: HTTP
  resolution: STATIC
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  annotations:
    multicluster.istio.io/provenance: default.reviews
  creationTimestamp: null
  name: dest-rule-reviews-v1
  namespace: default
spec:
  host: reviews-v1.default.svc.cluster.local
  trafficPolicy:
    tls:
      caCertificates: /etc/certs/root-cert.pem
      clientCertificate: /etc/certs/cert-chain.pem
      mode: MUTUAL
      privateKey: /etc/certs/key.pem
      sni: reviews-v1.default.svc.cluster.local
---
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  annotations:
    multicluster.istio.io/provenance: default.reviews
  creationTimestamp: null
  name: service-entry-reviews-v2
  namespace: default
spec:
  endpoints:
  - address: 255.255.255.255
    ports:
      http: 8080
  hosts:
  - reviews-v2.default.svc.cluster.local
  ports:
  - name: http
    number: 9080
    protocol: HTTP
  resolution: STATIC
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  annotations:
    multicluster.istio.io/provenance: default.reviews
  creationTimestamp: null
  name: dest-rule-reviews-v2
  namespace: default
spec:
  host: reviews-v2.default.svc.cluster.local
  trafficPolicy:
    tls:
      caCertificates: /etc/certs/root-cert.pem
      clientCertificate: /etc/certs/cert-chain.pem
      mode: MUTUAL
      privateKey: /etc/certs/key.pem
      sni: reviews-v2.default.svc.cluster.local
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    multicluster.istio.io/provenance: default.reviews
  creationTimestamp: null
  name: reviews
spec:
  ports:
  - port: 9080
    protocol: TCP
    targetPort: 0
  type: ClusterIP
status:
  loadBalancer: {}
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    multicluster.istio.io/provenance: default.reviews
  creationTimestamp: null
  name: reviews-v1
spec:
  ports:
  - port: 9080
    protocol: TCP
    targetPort: 0
  type: ClusterIP
status:
  loadBalancer: {}
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    multicluster.istio.io/provenance: default.reviews
  creationTimestamp: null
  name: reviews-v2
spec:
  ports:
  - port: 9080
    protocol: TCP
    targetPort: 0
  type: ClusterIP
status:
  loadBalancer: {}
