multicluster/pkg/test/istio-expose-binding/reviews-directingress-exposure.yaml.golden
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  creationTimestamp: null
  name: dest-rule-name
  namespace: default
spec:
  host: reviews.default.svc.cluster.local
  subsets:
  - name: notls
    trafficPolicy:
      tls: {}
  - labels:
      version: v1
    name: notls-v1
    trafficPolicy:
      tls: {}
  - labels:
      version: v1
    name: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  annotations:
    multicluster.istio.io/provenance: default.reviews
  creationTimestamp: null
  name: istio-ingressgateway-reviews-default
  namespace: default
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - reviews.default.svc.cluster.local
    port:
      name: reviews-default-80
      number: 80
      protocol: TLS
    tls: {}
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  annotations:
    multicluster.istio.io/provenance: default.reviews
  creationTimestamp: null
  name: ingressgateway-to-reviews-default
  namespace: default
spec:
  gateways:
  - istio-ingressgateway-reviews-default
  hosts:
  - reviews.default.svc.cluster.local
  tls:
  - match:
    - port: 80
      sniHosts:
      - reviews.default.svc.cluster.local
    route:
    - destination:
        host: reviews.default.svc.cluster.local
        port:
          number: 9080
        subset: notls
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  annotations:
    multicluster.istio.io/provenance: default.reviews-v1
  creationTimestamp: null
  name: istio-ingressgateway-reviews-v1-default
  namespace: default
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - reviews-v1.default.svc.cluster.local
    port:
      name: reviews-default-80
      number: 80
      protocol: TLS
    tls: {}
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  annotations:
    multicluster.istio.io/provenance: default.reviews-v1
  creationTimestamp: null
  name: ingressgateway-to-reviews-v1-default
  namespace: default
spec:
  gateways:
  - istio-ingressgateway-reviews-v1-default
  hosts:
  - reviews-v1.default.svc.cluster.local
  tls:
  - match:
    - port: 80
      sniHosts:
      - reviews-v1.default.svc.cluster.local
    route:
    - destination:
        host: reviews.default.svc.cluster.local
        port:
          number: 9080
        subset: notls-v1
