multicluster/pkg/test/istio-expose-binding/reviews-sni-exposure-v1-only-additions.yaml.golden
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  annotations:
    multicluster.istio.io/provenance: default.reviews-v1
  creationTimestamp: null
  name: istio-ingressgateway-reviews-v1-default
  namespace: default
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - reviews-v1.default.svc.cluster.global
    port:
      name: reviews-default-80
      number: 80
      protocol: TLS
    tls: {}
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  annotations:
    multicluster.istio.io/provenance: default.reviews-v1
  creationTimestamp: null
  name: ingressgateway-to-reviews-v1-default
  namespace: default
spec:
  gateways:
  - istio-ingressgateway-reviews-v1-default
  hosts:
  - reviews-v1.default.svc.cluster.global
  tls:
  - match:
    - port: 80
      sniHosts:
      - reviews-v1.default.svc.cluster.global
    route:
    - destination:
        host: reviews.default.svc.cluster.local
        port:
          number: 80
        subset: notls-v1
