multicluster/pkg/test/istio-expose-binding/rshriram-demo-binding.yaml.golden
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  annotations:
    multicluster.istio.io/provenance: default.server-rsb
  creationTimestamp: null
  name: service-entry-server-rsb
  namespace: default
spec:
  endpoints:
  - address: istio-egressgateway.istio-system.svc.cluster.local
    ports:
      http: 80
  hosts:
  - server.ns2.svc.cluster.global
  ports:
  - name: http
    number: 80
    protocol: HTTP
  resolution: DNS
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  annotations:
    multicluster.istio.io/provenance: default.server-rsb
  creationTimestamp: null
  name: dest-rule-server-rsb-ns2
  namespace: default
spec:
  host: server.ns2.svc.cluster.global
  trafficPolicy:
    tls:
      caCertificates: /etc/certs/root-cert.pem
      clientCertificate: /etc/certs/cert-chain.pem
      mode: MUTUAL
      privateKey: /etc/certs/key.pem
      sni: server.ns2.svc.cluster.global
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  annotations:
    multicluster.istio.io/provenance: default.server-rsb
  creationTimestamp: null
  name: istio-egressgateway-server-ns2
  namespace: default
spec:
  selector:
    istio: egressgateway
  servers:
  - hosts:
    - server.ns2.svc.cluster.global
    port:
      name: server-ns2-80
      number: 80
      protocol: TLS
    tls: {}
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  annotations:
    multicluster.istio.io/provenance: default.server-rsb
  creationTimestamp: null
  name: egressgateway-to-ingressgateway-server-ns2
  namespace: default
spec:
  gateways:
  - istio-egressgateway-server-ns2
  hosts:
  - server.ns2.svc.cluster.global
  tls:
  - match:
    - port: 80
      sniHosts:
      - server.ns2.svc.cluster.global
    route:
    - destination:
        host: cluster2
        port:
          number: 80
---
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  annotations:
    multicluster.istio.io/provenance: default.server-rsb
  creationTimestamp: null
  name: service-entry-ingress-gateway-cluster2
  namespace: default
spec:
  addresses:
  - 127.8.8.8
  endpoints:
  - address: 127.0.0.1
    ports:
      tcp: 80
  hosts:
  - cluster2
  ports:
  - name: tcp
    number: 80
    protocol: TCP
  resolution: DNS
