multicluster/pkg/test/istio-expose-binding/sample-exposure.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: dest-rule-ServiceA-default-notls
spec:
  host: ServiceA.default.svc.cluster.local
  subsets:
  - name: notls
    trafficPolicy:
      tls:
        mode: DISABLE
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: istio-ingressgateway-ServiceA-mynamespace
spec:
  selector:
    istio: ingressgateway
  servers:
    # Union of all ports exposed by this cluster
  - port:
      number: 80
      name: ServiceA-mynamespace-80
      protocol: TLS
    hosts:
    - ServiceA.mynamespace.svc.cluster.global
    tls:
      mode: PASSTHROUGH
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ingressgateway-to-ServiceA-mynamespace
spec:
  hosts:
  - ServiceA.mynamespace.svc.cluster.global
  gateways:
  - istio-ingressgateway-ServiceA-mynamespace
  tls:
  - match:
    - port: 80
      sniHosts:
      - ServiceA.mynamespace.svc.cluster.global
    route:
    - destination:
        host: ServiceA.mynamespace.svc.cluster.local
        subset: notls
        port:
          number: 80
