multicluster/pkg/test/istio-expose-binding/sample-exposure.yaml.golden
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  annotations:
    multicluster.istio.io/provenance: mynamespace.sample1
  creationTimestamp: null
  name: dest-rule-ServiceA-default-notls
  namespace: mynamespace
spec:
  host: ServiceA.default.svc.cluster.local
  subsets:
  - name: notls
    trafficPolicy:
      tls: {}
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  annotations:
    multicluster.istio.io/provenance: mynamespace.sample1
  creationTimestamp: null
  name: istio-ingressgateway-ServiceA-mynamespace
  namespace: mynamespace
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - FooA.mynamespace.svc.cluster.global
    port:
      name: ServiceA-mynamespace-80
      number: 80
      protocol: TLS
    tls:
      mode: SIMPLE
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  creationTimestamp: null
  name: ingressgateway-to-ServiceA-mynamespace
  namespace: mynamespace
spec:
  gateways:
  - istio-ingressgateway-ServiceA-mynamespace
  hosts:
  - FooA.mynamespace.svc.cluster.global
  tls:
  - match:
    - port: 80
      sniHosts:
      - FooA.mynamespace.svc.cluster.global
    route:
    - destination:
        host: ServiceA.mynamespace.svc.cluster.local
        port:
          number: 80
        subset: notls
